<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input" />

    <RadioGroup
        android:id="@+id/start_input_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/start_button_touch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/touch" />

        <RadioButton
            android:id="@+id/start_button_touch_jump"
            android:layout_width="wrap_content"
            android:enabled="false"
            android:layout_height="wrap_content"
            android:text="@string/touch_with_jump" />

        <RadioButton
            android:id="@+id/start_button_keyboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/keyboard" />
        
        <RadioButton
            android:id="@+id/start_button_analog"
            android:layout_width="wrap_content"
            android:enabled="false"
            android:layout_height="wrap_content"
            android:text="@string/analog" />

        <RadioButton
            android:id="@+id/start_button_multi_touch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:checked="true"
            android:text="@string/multi_touch" />
        
        <RadioButton
            android:id="@+id/start_button_fling_touch"
            android:layout_width="wrap_content"
            android:enabled="false"
            android:layout_height="wrap_content"
            android:text="@string/fling_touch" />

        <RadioButton
            android:id="@+id/start_button_pointer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pointer" />

        <RadioButton
            android:id="@+id/start_button_remember_pointer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smart_pointer" />
        
        <RadioButton
            android:id="@+id/start_button_touch_press"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/touch_press" />
        
        <RadioButton
            android:id="@+id/start_button_touch_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/touch_release" />
    </RadioGroup>

</LinearLayout>