<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ai" />

    <RadioGroup
        android:id="@+id/start_ai_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/start_ai_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ai_off" />

        <RadioButton
            android:id="@+id/start_ai_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ai_normal"
            android:checked="true" />
        <!-- 
        <RadioButton
            android:id="@+id/start_ai_runner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ai_runner"
            android:checked="true" /> -->
    </RadioGroup>

</LinearLayout>