<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="@dimen/settings_label_width"
            android:layout_height="wrap_content"
            android:text="@string/number_player" />

        <SeekBar
            android:id="@+id/number_player"
            android:layout_width="@dimen/slider_width"
            android:layout_height="wrap_content"
            android:max="2" />

        <TextView
            android:textIsSelectable="false"
            android:id="@+id/settings_number_player_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="@dimen/settings_label_width"
            android:layout_height="wrap_content"
            android:text="@string/zoom" />

        <SeekBar
            android:id="@+id/zoom"
            android:layout_width="@dimen/slider_width"
            android:layout_height="wrap_content"
            android:max="19" />

        <TextView
            android:textIsSelectable="false"
            android:id="@+id/settings_zoom_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="@dimen/settings_label_width"
            android:layout_height="wrap_content"
            android:text="@string/speed" />

        <SeekBar
            android:id="@+id/speed"
            android:layout_width="@dimen/slider_width"
            android:layout_height="wrap_content"
            android:max="19" />

        <TextView
            android:textIsSelectable="false" 
            android:id="@+id/settings_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>